--- a/index.html
+++ b/index.html
@@ -13,9 +13,158 @@
       crossorigin="anonymous"
     />
     <!-- FONT AWESONE   -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+      integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+      crossorigin="anonymous"
+    />
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- barra navigacion  -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">Abinet</a>
+        <button      type="button"      class="navbar-toggler"     data-toggle="collapse"  data-target="#navbarCollapse"  >
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item" ><a href="#home-section" class="nav-link" >Home</a> </li>
+                <li class="nav-item" ><a href="#info-section" class="nav-link" >Info</a> </li>
+                <li class="nav-item" ><a href="#create-section" class="nav-link" >Create</a> </li>
+            </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- HOME -->
+    
+        <header id="home-section">
+            <div class="dark-overlay">
+                <div class="home-inner">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-7 font-light">
+                                    <h1 class="display-3">Hola <strong>Soy</strong>home</h1>
+                                    <!-- ITEM -->
+                                    <div class="d-flex flex-row">
+                                        <div class="p-4">
+                                            <i class="fas fa-certificate" ></i>
+                                        </div>
+                                        <div class="p-4">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem 
+                                        </div>
+                                    </div>
+                                    <!-- ITEM -->
+                                    <div class="d-flex flex-row">
+                                        <div class="p-4">
+                                            <i class="fas fa-certificate" ></i>
+                                        </div>
+                                        <div class="p-4">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem 
+                                        </div>
+                                    </div>
+                                    <!-- ITEM -->
+                                    <div class="d-flex flex-row">
+                                        <div class="p-4">
+                                            <i class="fas fa-certificate" ></i>
+                                        </div>
+                                        <div class="p-4">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem 
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="col-lg-5 font-light">
+                                <div class="card text-center" style="background-color:#03fc7b;" >
+                                    <div class="card-body">
+                                        <h3>loren2  </h3>
+                                        <p>Lorem, ipsum dolor sit amet consectetur </p>
+                                        <form action="">
+                                            <div class="form-group">
+                                                <input type="text" class="form-control form-control-lg" placeholder="Username">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="text" class="form-control form-control-lg" placeholder="Password">
+                                            </div>                                            <div class="form-group">
+                                                <input type="text" class="form-control form-control-lg" placeholder="Confirm Password">
+                                            </div>
+                                            <input type="submit" class="btn btn-outline-light btn-block " value="Send" >
+                                        </form>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </header>
+
+        <section class="info-head-section"  >
+            <div class="container">
+                <div class="row">
+                    <div class="text-center p-5">
+                        <h1 class="display-4">Info</h1>    
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita modi accusantium delectus deleniti placeat perspiciatis.</p>
+                        <button type="button" class="btn btn-outline-secondary" >Lorem, ipsum dolor.</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="info-section bg-light text-muted py-5" id="info-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">      
+                        <img src="img/img1.png" alt="Fuegito">
+                    </div>
+                    <div class="col-md-6">      
+                        <h3>Services and products</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim et, at sapiente molestias eum quo?</p>
+                                    <!-- ITEM -->
+                                    <div class="d-flex flex-row">
+                                        <div class="p-4">
+                                            <i class="fas fa-certificate" ></i>
+                                        </div>
+                                        <div class="p-4">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem 
+                                        </div>
+                                    </div>                                    <!-- ITEM -->
+                                    <div class="d-flex flex-row">
+                                        <div class="p-4">
+                                            <i class="fas fa-certificate" ></i>
+                                        </div>
+                                        <div class="p-4">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem 
+                                        </div>
+                                    </div>
+                                                                        <!-- ITEM -->
+                                    <div class="d-flex flex-row">
+                                        <div class="p-4">
+                                            <i class="fas fa-certificate" ></i>
+                                        </div>
+                                        <div class="p-4">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem 
+                                        </div>
+                                    </div>
+                                    <!-- ITEM -->
+                                    <div class="d-flex flex-row">
+                                        <div class="p-4">
+                                            <i class="fas fa-certificate" ></i>
+                                        </div>
+                                        <div class="p-4">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem 
+                                        </div>
+                                    </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
 
     <!-- Bootstrap scripts CDN  -->
     <script
