--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap Website One</title>
+    <title>Website #1</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="/main.css">
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
       <div class="container">
         <a href="index.html" class="navbar-brand">
-          WebsiteOne
+         Website Alfonzzoj #1
         </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-8 d-none d-sm-block">
-                <h1 class="display-4">Lorem <strong>ipsum dolor</strong> sit amet, consectetur adipisicing.</h1>
+                <h1 class="display-4">Lorem <strong>ipsum dolor</strong> sit ametdipisicing.</h1>
 
                 <!-- check -->
                 <div class="d-flex flex-row">
@@ -221,7 +221,7 @@
         <div class="row">
           <div class="col-md-12 p-5">
             <!--Footer Bottom-->
-            <p class="text-center">&copy; Copyright 2016 - City of USA.  All rights reserved.</p>
+            <p class="text-center">&copy; Copyright 2016 - @Alfonzzoj - All rights reserved.</p>
           </div>
         </div>
       </div>
